<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LumoDroid</string>
    <string name="chat_hint">Ask me anything…</string>
    <string name="settings">Settings</string>
    <string name="api_key_label">API Key</string>
    <string name="model_label">Model</string>
    <string name="base_url_label">Base URL</string>
    <string name="save">Save</string>
    <string name="shortcut_quick_ask_short">Quick Ask</string>
    <string name="shortcut_quick_ask_long">Ask LumoDroid anything</string>
    <string name="shortcut_scan_network_short">Scan Network</string>
    <string name="shortcut_scan_network_long">Run a network scan</string>
    <string name="shortcut_check_sms_short">Check SMS</string>
    <string name="shortcut_check_sms_long">Read recent SMS messages</string>
</resources>
